; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/instmem/extr_nv40.c_nv44_graph_class.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/instmem/extr_nv40.c_nv44_graph_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nv04_instmem_priv = type { i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nv04_instmem_priv*)* @nv44_graph_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nv44_graph_class(%struct.nv04_instmem_priv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nv04_instmem_priv*, align 8
  store %struct.nv04_instmem_priv* %0, %struct.nv04_instmem_priv** %3, align 8
  %4 = load %struct.nv04_instmem_priv*, %struct.nv04_instmem_priv** %3, align 8
  %5 = call %struct.TYPE_2__* @nv_device(%struct.nv04_instmem_priv* %4)
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 240
  %9 = icmp eq i32 %8, 96
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = load %struct.nv04_instmem_priv*, %struct.nv04_instmem_priv** %3, align 8
  %13 = call %struct.TYPE_2__* @nv_device(%struct.nv04_instmem_priv* %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 15
  %17 = shl i32 1, %16
  %18 = and i32 2991, %17
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %11, %10
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local %struct.TYPE_2__* @nv_device(%struct.nv04_instmem_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
